# simple-cli-file-browser

./: README.md  pyproject.toml
.cursor/rules/: project.mdc  textual-patterns.mdc
.github/workflows/: ci.yml  release.yml
docs/plans/: readme-install-from-wheel.md
file_browser/: __init__.py  __main__.py  browser.py
tests/: test_app.py  test_resolve_start_path.py
