[project]
name = "file-browser"
version = "0.1.0"
description = "A simple Textual-based terminal file browser for the Linux CLI"
requires-python = ">=3.12"
dependencies = [
    "textual[syntax]>=8.2.7",
]

[project.scripts]
fbrowse = "file_browser.browser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["file_browser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "textual-dev>=1.8.0",
]
